# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./sessions";
 export * from "./orders";
 export * from "./invoices";
+export * from "./payments";
